fix: fix java 11 compatibility